--- a/Ballerina.toml
+++ b/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
-org = "kapilraaj"
-name = "google_contacts"
-version = "0.1.0"
+org= "ballerinax"
+name= "googleapis_people"
+version= "0.1.0"
 
 [build-options]
 observabilityIncluded = true
